--- a/BookService.WebAPI/appsettings.json
+++ b/BookService.WebAPI/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "BookService":  "Server=.\\sqlexpress;Database=BookService_1920;Integrated Security=true;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
