--- a/BookService.WebAPI/BookService.WebAPI.csproj
+++ b/BookService.WebAPI/BookService.WebAPI.csproj
@@ -17,4 +17,8 @@
     <Folder Include="wwwroot\images\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\BookService.Lib\BookService.Lib.csproj" />
+  </ItemGroup>
+
 </Project>
