--- a/BookService.WebAPI/appsettings.json
+++ b/BookService.WebAPI/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "BookService":  "Server=.\\sqlexpress;Database=BookService_1920;Integrated Security=true;"
+    "BookService": "Server=(localdb)\\MSSQLLocalDB;Database=BookService;Integrated Security=true;"
   },
   "Logging": {
     "LogLevel": {
